# Monte-Carlos-Pi

./: .clangd  .gitignore  CMakeLists.txt  README.md
include/: Dot.hpp  Game.hpp
src/: Dot.cpp  Game.cpp  main.cpp
